# trial_and_error

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test_trial_and_error.py
trial_and_error/: manage.py
trial_and_error/hello/: admin.py  apps.py  models.py  urls.py  views.py
trial_and_error/hello/migrations/: 0001_initial.py
trial_and_error/hello/static/css/: hello.css
trial_and_error/hello/templates/hello/: home.html
trial_and_error/trial_and_error/: asgi.py  settings.py  urls.py  wsgi.py
