[tool.poetry]
name = "trial_and_error"
version = "0.1.0"
description = "A simple project used to teach myself how to use Django. While looking at some datasets."
authors = ["Matthew Maxwell-Burton <matthewmaxwellburton@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthew73210/trial_and_error"
keywords = ["python", "Django", "poetry"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
pandas = "^1.0.3"
scipy = "^1.4.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
